avec l'exe sorti du sous-dossier

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	  <div class="span11">
 		  <p>
 		    Le Plugin UsbUirt envoie des commandes via l'&eacutemetteur USB-UIRT en utilisant le programme uutx.exe
-		    <code>./bin/uutx.exe</code> 
+		    <code>./uutx.exe</code> 
       </p>
      <br>
  
